RESOLVED FIXED219662
Fix for focus tracking in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=219662
Summary Fix for focus tracking in isolated tree mode.
Andres Gonzalez
Reported 2020-12-08 18:07:12 PST
Fix for focus tracking in isolated tree mode.
Attachments
Patch (8.77 KB, patch)
2020-12-08 18:20 PST, Andres Gonzalez
no flags
Patch (15.47 KB, patch)
2020-12-09 09:12 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-12-08 18:20:18 PST
chris fleizach
Comment 2 2020-12-08 18:25:39 PST
Comment on attachment 415697 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415697&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:482 > + if (!backingObject) Can this code here be moved into AccessibilityObject? It seems like a lot of core work in the platform wrapper
Andres Gonzalez
Comment 3 2020-12-09 09:12:11 PST
Andres Gonzalez
Comment 4 2020-12-09 09:13:21 PST
(In reply to chris fleizach from comment #2) > Comment on attachment 415697 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=415697&action=review > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:482 > > + if (!backingObject) > > Can this code here be moved into AccessibilityObject? It seems like a lot of > core work in the platform wrapper Done. Thanks!
EWS
Comment 5 2020-12-09 16:35:54 PST
Committed r270609: <https://trac.webkit.org/changeset/270609> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415767 [details].
Radar WebKit Bug Importer
Comment 6 2020-12-09 16:36:15 PST
Note You need to log in before you can comment on or make changes to this bug.