Fix for focus tracking in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=219662

Reviewed by Chris Fleizach.

Covered by existing tests.

- AXIsolatedTree::setFocusedNodeID and applyPendingChanges now properly
handle the focused node ID update when the focused object changes.
- AccessibilityObject::setFocused sets focus and activates the
corresponding view. This was done in the wrapper baseAccessibilitySetFocus
method, but this is a more appropriate place for this core functionality.
- Some code cleanup, ASSERT checks of appropriate thread, and additional
logging.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::setFocused):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::setFocused):
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::setFocused):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilitySetFocus:]):
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::page const):
(WebCore::AXIsolatedObject::document const):
(WebCore::AXIsolatedObject::documentFrameView const):
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::setFocusedNodeID):
(WebCore::AXIsolatedTree::applyPendingChanges):
* accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase baseAccessibilitySetFocus:]):
Deleted, not needed since core functionality is now in AccessibilityObject::setFocused.
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
(-[WebAccessibilityObjectWrapper _accessibilitySetValue:forAttribute:]):


Canonical link: https://commits.webkit.org/232276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270609 268f45cc-cd09-0410-ab3c-d52691b4dbfc