Source/WebCore/accessibility/AccessibilityScrollView.cpp
@@ -104,9 +104,12 @@ bool AccessibilityScrollView::isFocused() const
     AccessibilityObject* webArea = webAreaObject();
     return webArea && webArea->isFocused();
 }
-    
+
 void AccessibilityScrollView::setFocused(bool focused)
 {
+    // Call the base class setFocused to ensure the view is focused and active.
+    AccessibilityObject::setFocused(focused);
+
     if (AccessibilityObject* webArea = webAreaObject())
         webArea->setFocused(focused);
 }
